tests for actions

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
-    "jest-enzyme": "^7.1.1"
+    "jest-enzyme": "^7.1.1",
+    "maxios": "^1.0.2",
+    "moxios": "^0.4.0"
   }
 }
